implement vites for test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
-{
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ],
-  "compilerOptions": {
-    "erasableSyntaxOnly": false
-  }
+{"compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react-jsx",
+    "types": ["vitest"]  // 👈 esto es clave
+  },
+  "include": ["src", "src/vitest.d.ts"] // 👈 importante incluir ese archivo
 }
