--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "zustand": "^5.0.5"
